--- a/style.css
+++ b/style.css
@@ -7,18 +7,18 @@ body {
   color: rgb(44,254,213);
 }
 
-header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
 h1 {
   width: 100vw;
   text-align: center;
 }
 
 h3 {
-  width: 100vw;
+  width: inherit;
+  text-align: center;
+}
+
+main {
+  width: 70vw;
+  margin: 0 auto;
   text-align: center;
 }
