--- a/style.css
+++ b/style.css
@@ -90,11 +90,26 @@ main {
 
 .project-image {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+}
+
+.go-further-links {
+  display: flex;
+  justify-content: space-around;
+}
+
+a.go-further-button {
+  /* background-color: hsla(168,99%,58%,0.7); */
+  color: red;
+  border: 1px solid white;
 }
 
 img {
   max-width: 100%;
+  max-height: 330px;
 }
 
 .project-content {
