--- a/style.css
+++ b/style.css
@@ -102,9 +102,10 @@ main {
 }
 
 a.go-further-button {
-  /* background-color: hsla(168,99%,58%,0.7); */
-  color: red;
-  border: 1px solid white;
+  color: hsl(227, 26%, 11%);
+  padding: 2px 5px;
+  background-color: hsl(168,99%,58%);
+  border-radius: 5px;
 }
 
 img {
