--- a/style.css
+++ b/style.css
@@ -68,12 +68,15 @@ main {
 
 .technologies-icons {
   margin: 0 auto;
-  max-width: 70%;
+  width: 70%;
   line-height: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.technologies-icons i {
-  margin: 10px;
+.technologies-icons div {
+  margin: 0 10px;
 }
 
 .project {
