--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+  --background-color: hsl(227, 26%, 11%);
+  --primary-color: hsl(168,99%,58%);
+  --primary-color-hover: hsl(168,99%,33%);
+  --text-color: #ccc;
+}
+
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -10,19 +17,19 @@ a {
 
 body {
   font-family: 'Roboto Mono', monospace;
-  background-color: hsl(227, 26%, 11%);
-  color: hsl(168,99%,58%);
+  background-color: var(--background-color);
+  color: var(--primary-color);
   text-align: center;
   line-height: 1.4;
 }
 
 body a {
-  color: hsl(168,99%,58%);
+  color: var(--primary-color);
   transition: all 0.2s linear;
 }
 
 body a:hover {
-color: hsl(168,99%,33%);
+color: var(--primary-color-hover);
 }
 
 header {
@@ -38,12 +45,12 @@ footer {
 }
 
 footer a {
-  color: hsl(168,99%,58%);
+  color: var(--primary-color);
   transition: all 0.2s linear;
 }
 
 footer a:hover {
-color: hsl(168,99%,33%);
+color: var(--primary-color-hover);
 }
 
 .cta-icons {
@@ -69,7 +76,7 @@ i {
 
 p {
   font-family: 'Varela Round', sans-serif;
-  color: #ccc;
+  color: var(--text-color);
 }
 
 main {
@@ -111,7 +118,7 @@ main {
 
 .technologies-icons div .technologies-icons-caption {
   opacity: 0;
-  color: #ccc;
+  color: var(--text-color);
   font-size: 0.8rem;
   text-align: center;
   margin-top: -38px;
@@ -137,7 +144,7 @@ main {
 
 .go-further-button {
   padding: 3px 10px;
-  border: 1px solid hsl(168,99%,58%);
+  border: 1px solid var(--primary-color);
   border-radius: 10px;
   transition: all 0.2s linear;
 }
@@ -153,12 +160,12 @@ img {
 
 .project-content p a {
   /* text-decoration: underline; */
-  color: hsl(168,99%,58%);
+  color: var(--primary-color);
   transition: all 0.2s linear;
 }
 
 .project-content p a:hover {
-  color: hsl(168,99%,33%);
+  color: var(--primary-color-hover);
 }
 
 .has-text-left {
@@ -190,12 +197,12 @@ img {
 @media (hover: hover) {
   .cta-icons i:hover{
     transform: scale(1.2);
-    color: hsla(168,99%,58%,0.7);
+    color: var(--primary-color-hover);
   }
 
   .down-chevron:hover {
     transform: scale(1.35);
-    color: hsla(168,99%,58%,0.7);
+    color: var(--primary-color-hover);
   }
 
   .technologies-icons div:hover i {
@@ -207,8 +214,8 @@ img {
   }
 
   .go-further-button:hover {
-    background-color: hsl(168,99%,58%);
-    color: hsl(227, 26%, 11%);
+    background-color: var(--primary-color);
+    color: var(--background-color);
   }
 }
 
@@ -233,7 +240,7 @@ img {
   .project {
     display: block;
     padding-bottom: 2rem;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--text-color);
     margin-bottom: 2rem;
   }
 
