--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+.themeToggle {
+  max-width: 100px;
+}
+
 body {
   font-family: 'Roboto Mono', monospace;
   background-color: var(--background-color);
