--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-@import url('./dark.css') screen;
-@import url('./light.css') screen and (prefers-color-scheme: light);
+@import url('./dark.css');
+@import url('./light.css');
 
 * {
   box-sizing: border-box;
