--- a/styles/themeAlternateColors.css
+++ b/styles/themeAlternateColors.css
@@ -1,6 +1,6 @@
-[theme="light"] {
+[theme="alternate"] {
   --background-color: rgb(245,245,245);
   --primary-color: orange;
   --primary-color-hover: red;
-  --text-color: darkgrey;
+  --text-color: black;
 }
