Replaced button element with a toggle slider

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 @import url('./themeDefaultColors.css');
 /* Import alternate styles after, to overwrite the defaults if the condition is satisfied */
 @import url('./themeAlternateColors.css');
+@import url('./switch.css');
 
 * {
   box-sizing: border-box;
