--- a/styles/switch.css
+++ b/styles/switch.css
@@ -41,7 +41,7 @@
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: var(--primary-color);
 }
 
 input:focus + .slider {
